[project]
name = "agent-toolbox"
version = "1.0.0"
description = ""
authors = [
    {name = "Simon Unterbusch",email = "simonunterbusch@unterbusch.com"}
]
readme = "README.md"
requires-python = ">=3.11,<=3.11.11"
dependencies = [
    "typing-extensions (>=4.12.2,<5.0.0)",
    "langgraph (>=0.2.74,<2.0.0)",
    "langchain-core (>=0.3.36,<2.0.0)",
    "langchain-openai (>=0.3.6,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-anthropic (>=0.3.7,<2.0.0)",
    "psycopg (>=3.2.4,<4.0.0)",
    "aiohttp (>=3.11.12,<4.0.0)",
    "aiohttp-socks (>=0.10.1,<0.11.0)",
    "langchain-community (>=0.3.17,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "mkinit (>=1.1.0,<2.0.0)",
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "psycopg-pool (>=3.2.4,<4.0.0)",
    "langgraph-checkpoint (>=2.0.16,<4.0.0)",
    "langgraph-checkpoint-sqlite (>=2.0.5,<4.0.0)",
    "langgraph-checkpoint-postgres (>=2.0.15,<4.0.0)",
    "requests[socks] (>=2.32.3,<3.0.0)",
    "langchain-ollama (>=0.3.0,<2.0.0)",
    "langchain-experimental (>=0.3.4,<2.0.0)",
    "deepagents (>=0.2.8,<0.3.0)",
    "langchain-mistralai (>=1.0.1,<2.0.0)",
    "langchain-google-genai (>=3.1.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
